<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@color/surface"
    tools:context=".controller.QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/practice_mode"
            android:textColor="@color/on_surface_variant"/>

        <TextView
            android:id="@+id/tv_question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/question_number"
            android:textColor="@color/on_surface_variant"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/question_background"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="45dp"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/question"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_question_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:text="@string/question_type"
            android:textColor="@color/white"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_answers_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_answer_1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_1"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_answer_2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_2"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_answer_3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_3"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_answer_4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_4"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_answers_check_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <CheckBox
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/chk_answer_1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_1"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <CheckBox
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/chk_answer_2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_2"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <CheckBox
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/chk_answer_3"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_3"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

        <CheckBox
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/chk_answer_4"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/answer_4"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/primary"
        android:textSize="16sp"/>

</LinearLayout>